# stripe-testbed

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  stripe_testbed.py
conf/: config.json.example
python/: .gitignore  README.md  requirements.txt  stripe_testbed.py
python/conf/: config.json.example
rust/: Cargo.toml  README.md
rust/conf/: config.json.example
rust/src/: main.rs
web/: Dockerfile  README.md  __init__.py  app.py  runner.py
web/static/: styles.css
web/templates/: dashboard.html  layout.html  payments.html
