[package]
name = "stripe-testbed"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
colored = "2.1"
anyhow = "1.0"
